[gd_scene load_steps=2 format=3 uid="uid://wop5emouwadi"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_f1asp"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_f1asp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09, 0.09, 0.1, 0.784314)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="NextButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level
"

[node name="MMButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MMButton" to="." method="_on_mm_button_pressed"]
